data/derived/comb/progs/unify/prog7571.ml.out
Characters 54-55:
  let fixpoint (f,b) = wwhile (let g x=  (f,x = f x) in g,b);;
                                                        ^
Error: This expression has type 'a -> ('a -> 'a) * bool
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside 'a -> 'a
